--- a/_posts/2023-05-05-电力电子题库.md
+++ b/_posts/2023-05-05-电力电子题库.md
@@ -1,6 +1,6 @@
 
 本页浏览次数：
-![ViewCount](https://count.getloli.com/get/@test)
+![ViewCount](https://count.getloli.com/get/@SYU_CE_3-2_PowerElectronic)
 
 ## What are the general Tasks of Power Electronics
 Common tasks of power electronics are transforming and controlling the flow of electrical energy with minimal energy losses. These include power conversion, control, conditioning, motor control, and renewable energy.
