--- a/_posts/2023-05-04-维护通知.md
+++ b/_posts/2023-05-04-维护通知.md
@@ -1,18 +1,3 @@
 ## 维护通知！！
 
-今日起网页焕新，曾今的资料予以保存，以下为入口：
-
-沈阳大学20级资料
-
-## 大三上
-
-> [**物流**](code/3-1/Logistics/0914.md)
-
-> [**马克思主义思想 - 彭波**](code/3-1/Marxism/Homework/Homework.md)
-
-## 大二下
-
-> [**项目管理 - 章翔**](code/2-2/ProgramManage/pm_2-2.md)
-
-> [**社会主义核心价值观 - 王凤环**](code/2-2/Social/social_2-2.md)
-
+今日起网页焕新，曾今的资料予以保存，[点击进入](https://github.com/CoolestEnoch/Course_SYU/blob/main/README.md)
