--- a/_posts/2023-06-14-信号传输与调制.md
+++ b/_posts/2023-06-14-信号传输与调制.md
@@ -15,7 +15,7 @@ title: 信号传输与调制
 
 
 本页浏览次数：
-![ViewCount](https://count.getloli.com/get/@SYU_int_3-2_STIMO114514)
+![ViewCount](https://count.getloli.com/get/@SYU_int_3-2_STIMO)
 
 
 
