--- a/_posts/2023-06-26-可再生能源课后习题.md
+++ b/_posts/2023-06-26-可再生能源课后习题.md
@@ -54,4 +54,10 @@ The primary energy demand of the electro stove is with 460 Wh(瓦时) about 50% 
 
 
 
+# 0627
+## 9. What does a temperature increase on the earth's surface by a total of 2℃ or by 0.1℃ per decade for humanity mean? Name and discuss the respective scenarios!
+A 2℃ or 0.1℃ per decade temperature increase can lead to severe impacts like extreme weather, rising seas, ecosystem disruptions, and human health risks.
+
+
+## 10. Scaling the temperature increase from 1℃ up to 5℃ causes various environmental effects. Enumerate those effects due to global climate change and discuss the details concerning the different foreseeable future developments and impacts!
 
