--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -54,3 +54,11 @@ The primary energy demand of the electro stove is with 460 Wh(瓦时) about 50% 
 
 
 
+# 0627
+## 9. What does a temperature increase on the earth's surface by a total of 2℃ or by 0.1℃ per decade for humanity mean? Name and discuss the respective scenarios!地球表面温度总共升高2℃，或者每十年升高0.1℃，对人类来说意味着什么？ 说出并讨论相应的场景！
+A 2℃ or 0.1℃ per decade temperature increase can lead to severe impacts like extreme weather, rising seas, ecosystem disruptions, and human health risks.每十年气温升高2℃或0.1℃可能会导致极端天气、海平面上升、生态系统破坏和人类健康风险等严重影响。
+
+
+## 10. Scaling the temperature increase from 1℃ up to 5℃ causes various environmental effects. Enumerate those effects due to global climate change and discuss the details concerning the different foreseeable future developments and impacts!将温度升高从 1℃ 增加到 5℃ 会导致各种环境影响。 列举全球气候变化造成的影响，并讨论有关不同可预见的未来发展和影响的细节！
+
+
