--- a/_posts/2023-06-26-可再生能源课后习题.md
+++ b/_posts/2023-06-26-可再生能源课后习题.md
@@ -60,4 +60,4 @@ A 2℃ or 0.1℃ per decade temperature increase can lead to severe impacts like
 
 
 ## 10. Scaling the temperature increase from 1℃ up to 5℃ causes various environmental effects. Enumerate those effects due to global climate change and discuss the details concerning the different foreseeable future developments and impacts!
-
+Ocean acidification threatens fish and fishing industry. Africa's agricultural yields may decrease by 10-20%, and China's rice gains by 5-12%. Water scarcity in the Mediterranean limits irrigation, while drought impacts Southern Europe. Starving people may increase by 150-500 million. Africa and northern latitudes experience crop reductions. Dry regions like Australia struggle with agriculture, while higher latitudes see yield increases.
