--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -60,5 +60,5 @@ A 2℃ or 0.1℃ per decade temperature increase can lead to severe impacts like
 
 
 ## 10. Scaling the temperature increase from 1℃ up to 5℃ causes various environmental effects. Enumerate those effects due to global climate change and discuss the details concerning the different foreseeable future developments and impacts!将温度升高从 1℃ 增加到 5℃ 会导致各种环境影响。 列举全球气候变化造成的影响，并讨论有关不同可预见的未来发展和影响的细节！
-
+Ocean acidification threatens fish and fishing industry. Africa's agricultural yields may decrease by 10-20%, and China's rice gains by 5-12%. Water scarcity in the Mediterranean limits irrigation, while drought impacts Southern Europe. Starving people may increase by 150-500 million. Africa and northern latitudes experience crop reductions. Dry regions like Australia struggle with agriculture, while higher latitudes see yield increases.海洋酸化威胁着鱼类和渔业。 非洲农业产量可能下降10-20%，中国稻米增产5-12%。 地中海缺水限制了灌溉，而干旱影响了南欧。 挨饿的人可能会增加150-5亿。 非洲和北纬地区作物减产。 像澳大利亚这样的干旱地区的农业发展举步维艰，而高纬度地区的产量却有所增加。
 
