--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -86,3 +86,30 @@ Throttle (expansion valve): the working fluid under pressure is released again; 
 ⑩: Stirling engine supporting framework斯特林发动机支撑框架
 ⑪: Stirling engine斯特林发动机
 
+
+
+# 0629
+## 1. What is Nuclear Fusion? Explain the basic principle of Nuclear Fusion.什么是核聚变？ 解释核聚变的基本原理
+Nuclear fusion is the process of atomic nuclei combining to form a new nucleus. This reaction powers the sun and stars, releasing energy. Fusion reactions can be either exothermic (releasing energy) or endothermic (absorbing energy).
+
+## 2. What is Nuclear Fission? Explain the basic principles of Nuclear Fission.
+同上一题
+
+## 3. What are Solar Winds? What is the effect of Solar Winds on the earth?什么是太阳风？ 太阳风对地球有什么影响？
+Solar winds are streams of charged particles expelled from the Sun that can cause magnetic field disturbances, ionospheric effects, particle hazards, and contribute to atmospheric escape.
+
+## 4. Why are lower irradiance levels usually measured on Earth than in space?为什么在地球上测量到的辐照度水平通常低于在太空中测量的辐照度水平？
+Lower irradiance levels are typically measured on Earth than in space due to atmospheric reflection, absorption, Rayleigh scattering, and Mie scattering caused by components of the atmosphere and particles in the air.
+
+## 5. Calculate the mean temperature of the solar surface with the value of the solar constant = 1360 W / m2! Take as middle-distance earth-sun = km!
+$M_{e,\ Sonne}\ast A_S\ =\ E_e\ast A_{SE}$ ，而 $A_{SE}\ =\ 4\ \ast\ \pi\ \ast\ {r_{SE}}^ 2$
+$E_e = M_{e, Sonne} \ast \dfrac{A_S}{A_{SE}} = M_{e, Sonne} \ast \left(\dfrac{r_S}{r_{SE}}\right)^{ 2} = 1360 \dfrac{W}{m^2}$
+这使得可以使用斯蒂芬-玻尔兹曼定律来确定太阳的表面温度。
+$M_e\left(T\right)=\sigma\ \ast\ T^4$
+斯蒂芬-玻尔兹曼常数投降
+$\sigma\ =\ 5.67051\ \ast\ {10}^{-8}\ \frac{W}{m^2K^4}$
+$T_{Sonne\ }\cong\ 5760K$
+
+
+## 6.Global Irradiance on a Horizontal Surface on the Earth. Give a formula and explain the relevance.地球水平表面上的全球辐照度。 给出一个公式并解释其相关性。
+$E_{dir,\ gen}\ =\ E_{dir,\ hor}\ *\ \dfrac{cos\ \theta_{gen}}{sin\gamma_S}$ 
