--- a/_posts/2023-06-26-可再生能源课后习题.md
+++ b/_posts/2023-06-26-可再生能源课后习题.md
@@ -100,12 +100,12 @@ Solar winds are streams of charged particles expelled from the Sun that can caus
 Lower irradiance levels are typically measured on Earth than in space due to atmospheric reflection, absorption, Rayleigh scattering, and Mie scattering caused by components of the atmosphere and particles in the air.
 
 ## 5. Calculate the mean temperature of the solar surface with the value of the solar constant = 1360 W / m2! Take as middle-distance earth-sun = km!
-$M_{e,\ Sonne}\ast A_S\ =\ E_e\ast A_{SE}$   ,while   $A_{SE}\ =\ 4\ \ast\ \pi\ \ast\ {r_{SE}}^2$ 
-$E_e = M_{e, Sonne} \ast \dfrac{A_S}{A_{SE}} = M_{e, Sonne} \ast \left(\dfrac{r_S}{r_{SE}}\right)^{2} = 1360 \dfrac{W}{m^2}$ 
-This allows the surface temperature of the sun to be determined using the Stefan-Boltzmann law.
-$M_e\left(T\right)=\sigma\ \ast\ T^4$
-with the Stefan-Boltzmann constant surrendered
-$\sigma\ =\ 5.67051\ \ast\ {10}^{-8}\ \frac{W}{m^2K^4}$ 
+$M_{e,\ Sonne}\ast A_S\ =\ E_e\ast A_{SE}$   ,while   $A_{SE}\ =\ 4\ \ast\ \pi\ \ast\ {r_{SE}}^2$ <br/>
+$E_e = M_{e, Sonne} \ast \dfrac{A_S}{A_{SE}} = M_{e, Sonne} \ast \left(\dfrac{r_S}{r_{SE}}\right)^{2} = 1360 \dfrac{W}{m^2}$  <br/>
+This allows the surface temperature of the sun to be determined using the Stefan-Boltzmann law.  <br/>
+$M_e\left(T\right)=\sigma\ \ast\ T^4$  <br/>
+with the Stefan-Boltzmann constant surrendered  <br/>
+$\sigma\ =\ 5.67051\ \ast\ {10}^{-8}\ \frac{W}{m^2K^4}$  <br/>
 $T_{Sonne\ }\cong\ 5760K$ 
 
 
