--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -102,13 +102,13 @@ Solar winds are streams of charged particles expelled from the Sun that can caus
 Lower irradiance levels are typically measured on Earth than in space due to atmospheric reflection, absorption, Rayleigh scattering, and Mie scattering caused by components of the atmosphere and particles in the air.
 
 ## 5. Calculate the mean temperature of the solar surface with the value of the solar constant = 1360 W / m2! Take as middle-distance earth-sun = km!
-$M_{e,\ Sonne}\ast A_S\ =\ E_e\ast A_{SE}$ ，而 $A_{SE}\ =\ 4\ \ast\ \pi\ \ast\ {r_{SE}}^ 2$
-$E_e = M_{e, Sonne} \ast \dfrac{A_S}{A_{SE}} = M_{e, Sonne} \ast \left(\dfrac{r_S}{r_{SE}}\right)^{ 2} = 1360 \dfrac{W}{m^2}$
-这使得可以使用斯蒂芬-玻尔兹曼定律来确定太阳的表面温度。
-$M_e\left(T\right)=\sigma\ \ast\ T^4$
-斯蒂芬-玻尔兹曼常数投降
-$\sigma\ =\ 5.67051\ \ast\ {10}^{-8}\ \frac{W}{m^2K^4}$
-$T_{Sonne\ }\cong\ 5760K$
+$M_{e,\ Sonne}\ast A_S\ =\ E_e\ast A_{SE}$ ，而 $A_{SE}\ =\ 4\ \ast\ \pi\ \ast\ {r_{SE}}^ 2$  <br/>
+$E_e = M_{e, Sonne} \ast \dfrac{A_S}{A_{SE}} = M_{e, Sonne} \ast \left(\dfrac{r_S}{r_{SE}}\right)^{ 2} = 1360 \dfrac{W}{m^2}$  <br/>
+这使得可以使用斯蒂芬-玻尔兹曼定律来确定太阳的表面温度。  <br/>
+$M_e\left(T\right)=\sigma\ \ast\ T^4$  <br/>
+斯蒂芬-玻尔兹曼常数投降  <br/>
+$\sigma\ =\ 5.67051\ \ast\ {10}^{-8}\ \frac{W}{m^2K^4}$  <br/>
+$T_{Sonne\ }\cong\ 5760K$  <br/>
 
 
 ## 6.Global Irradiance on a Horizontal Surface on the Earth. Give a formula and explain the relevance.地球水平表面上的全球辐照度。 给出一个公式并解释其相关性。
