--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -93,7 +93,7 @@ Throttle (expansion valve): the working fluid under pressure is released again; 
 Nuclear fusion is the process of atomic nuclei combining to form a new nucleus. This reaction powers the sun and stars, releasing energy. Fusion reactions can be either exothermic (releasing energy) or endothermic (absorbing energy).
 
 ## 2. What is Nuclear Fission? Explain the basic principles of Nuclear Fission.
-同上一题
+Nuclear fission is the process in which an atomic nucleus splits into two or more smaller nuclei, releasing a significant amount of energy. It can lead to a chain reaction, unlike fusion.核裂变是原子核分裂成两个或更多个较小原子核并释放大量能量的过程。 与聚变不同，它会导致连锁反应。
 
 ## 3. What are Solar Winds? What is the effect of Solar Winds on the earth?什么是太阳风？ 太阳风对地球有什么影响？
 Solar winds are streams of charged particles expelled from the Sun that can cause magnetic field disturbances, ionospheric effects, particle hazards, and contribute to atmospheric escape.
