--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -101,7 +101,7 @@ Solar winds are streams of charged particles expelled from the Sun that can caus
 ## 4. Why are lower irradiance levels usually measured on Earth than in space?为什么在地球上测量到的辐照度水平通常低于在太空中测量的辐照度水平？
 Lower irradiance levels are typically measured on Earth than in space due to atmospheric reflection, absorption, Rayleigh scattering, and Mie scattering caused by components of the atmosphere and particles in the air.
 
-## 5. Calculate the mean temperature of the solar surface with the value of the solar constant = 1360 W / m2! Take as middle-distance earth-sun = km!
+## 5. Calculate the mean temperature of the solar surface with the value of the solar constant = 1360 W / m2! Take as middle-distance earth-sun = km! [遇到乱码点我](https://github.com/CoolestEnoch/Course_SYU/blob/main/_posts/2023-06-26-%E5%8F%AF%E5%86%8D%E7%94%9F%E8%83%BD%E6%BA%90%E8%AF%BE%E5%90%8E%E4%B9%A0%E9%A2%98.md#5-calculate-the-mean-temperature-of-the-solar-surface-with-the-value-of-the-solar-constant--1360-w--m2-take-as-middle-distance-earth-sun--km)
 $M_{e,\ Sonne}\ast A_S\ =\ E_e\ast A_{SE}$ ，而 $A_{SE}\ =\ 4\ \ast\ \pi\ \ast\ {r_{SE}}^ 2$  <br/>
 $E_e = M_{e, Sonne} \ast \dfrac{A_S}{A_{SE}} = M_{e, Sonne} \ast \left(\dfrac{r_S}{r_{SE}}\right)^{ 2} = 1360 \dfrac{W}{m^2}$  <br/>
 这使得可以使用斯蒂芬-玻尔兹曼定律来确定太阳的表面温度。  <br/>
@@ -111,5 +111,5 @@ $\sigma\ =\ 5.67051\ \ast\ {10}^{-8}\ \frac{W}{m^2K^4}$  <br/>
 $T_{Sonne\ }\cong\ 5760K$  <br/>
 
 
-## 6.Global Irradiance on a Horizontal Surface on the Earth. Give a formula and explain the relevance.地球水平表面上的全球辐照度。 给出一个公式并解释其相关性。
+## 6.Global Irradiance on a Horizontal Surface on the Earth. Give a formula and explain the relevance.地球水平表面上的全球辐照度。 给出一个公式并解释其相关性。[遇到乱码点我](https://github.com/CoolestEnoch/Course_SYU/blob/main/_posts/2023-06-26-%E5%8F%AF%E5%86%8D%E7%94%9F%E8%83%BD%E6%BA%90%E8%AF%BE%E5%90%8E%E4%B9%A0%E9%A2%98.md#6global-irradiance-on-a-horizontal-surface-on-the-earth-give-a-formula-and-explain-the-relevance)https://github.com/CoolestEnoch/Course_SYU/blob/main/_posts/2023-06-26-%E5%8F%AF%E5%86%8D%E7%94%9F%E8%83%BD%E6%BA%90%E8%AF%BE%E5%90%8E%E4%B9%A0%E9%A2%98.md#6global-irradiance-on-a-horizontal-surface-on-the-earth-give-a-formula-and-explain-the-relevance)
 $E_{dir,\ gen}\ =\ E_{dir,\ hor}\ *\ \dfrac{cos\ \theta_{gen}}{sin\gamma_S}$ 
