--- a/_posts/2023-06-26-可再生能源课后习题.md
+++ b/_posts/2023-06-26-可再生能源课后习题.md
@@ -111,3 +111,37 @@ $T_{Sonne\ }\cong\ 5760K$
 
 ## 6.Global Irradiance on a Horizontal Surface on the Earth. Give a formula and explain the relevance. [遇到乱码点我](https://github.com/CoolestEnoch/Course_SYU/blob/main/_posts/2023-06-26-%E5%8F%AF%E5%86%8D%E7%94%9F%E8%83%BD%E6%BA%90%E8%AF%BE%E5%90%8E%E4%B9%A0%E9%A2%98.md#6global-irradiance-on-a-horizontal-surface-on-the-earth-give-a-formula-and-explain-the-relevance-%E9%81%87%E5%88%B0%E4%B9%B1%E7%A0%81%E7%82%B9%E6%88%91)
 $E_{dir,\ gen}\ =\ E_{dir,\ hor}\ *\ \dfrac{cos\ \theta_{gen}}{sin\gamma_S}$ 
+
+
+# 0630
+## 7. Calculate the direct irradiation on a surface deviating from the horizontal by 10° (30°solar radiation), if one knows the irradiance Edir, hor on the horizontal surface!
+(not important)
+P31
+
+
+## 8. Sketch the influence of inclination angle γE and surface efficiency on the shading angle α!
+(not important)
+P54
+
+
+## 9. In the following solar orbit diagram, the shading effects are entered in the form of an object traverse. Rate and discuss the shading effects!
+These calculations are performed for all obstacles in the vicinity of the solar system. Object height and distance to the observer point must be known Silhouette of the environment in the form of a polygon (= object polygon) is entered in a sun orbit diagram Read when shadowing occurs
+
+
+## 10. Sketch the influence of inclination angle γE and shading angle α on the relative shading losses!
+(not important)
+P69
+
+
+## 11. Which environmental boundary conditions lead to significant shading losses, which must be taken into account when constructing solar systems? Which rule of thumb is followed to avoid shading losses?
+Minimize shading losses in solar systems by considering these factors:
+1. Buildings: Keep a distance of at least 2.7 times the height of the shadow-casting edge from the solar facade.
+2. Trees/Vegetation: Maintain a distance of at least 2 times the height for stand-alone conifers. Be cautious with deciduous trees due to extended foliage periods.
+3. Topography: Shading effects are influenced by nearby objects' altitude. Northern slopes increase shading, while southern slopes decrease it.
+Follow these guidelines to reduce shading and optimize solar system efficiency.
+
+
+## 12. To measure the global irradiance 2 measurement principles are used. Describe these with typical application features and restrictions!
+(not important)
+1. Semiconductor sensors: These sensors generate a current based on the irradiance, but they are affected by temperature and spectral changes and require corrections for accurate measurements.
+2. Pyranometers: These instruments directly measure total solar radiation and are not influenced by temperature or spectral variations. They provide reliable measurements of global irradiance.
