--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -113,3 +113,37 @@ $T_{Sonne\ }\cong\ 5760K$  <br/>
 
 ## 6.Global Irradiance on a Horizontal Surface on the Earth. Give a formula and explain the relevance.地球水平表面上的全球辐照度。 给出一个公式并解释其相关性。[遇到乱码点我](https://github.com/CoolestEnoch/Course_SYU/blob/main/_posts/2023-06-26-%E5%8F%AF%E5%86%8D%E7%94%9F%E8%83%BD%E6%BA%90%E8%AF%BE%E5%90%8E%E4%B9%A0%E9%A2%98_%E4%B8%AD%E8%8B%B1%E5%AF%B9%E8%AF%91.md#6global-irradiance-on-a-horizontal-surface-on-the-earth-give-a-formula-and-explain-the-relevance%E5%9C%B0%E7%90%83%E6%B0%B4%E5%B9%B3%E8%A1%A8%E9%9D%A2%E4%B8%8A%E7%9A%84%E5%85%A8%E7%90%83%E8%BE%90%E7%85%A7%E5%BA%A6-%E7%BB%99%E5%87%BA%E4%B8%80%E4%B8%AA%E5%85%AC%E5%BC%8F%E5%B9%B6%E8%A7%A3%E9%87%8A%E5%85%B6%E7%9B%B8%E5%85%B3%E6%80%A7%E9%81%87%E5%88%B0%E4%B9%B1%E7%A0%81%E7%82%B9%E6%88%91)
 $E_{dir,\ gen}\ =\ E_{dir,\ hor}\ *\ \dfrac{cos\ \theta_{gen}}{sin\gamma_S}$ 
+
+
+# 0630
+## 7. Calculate the direct irradiation on a surface deviating from the horizontal by 10° (30°solar radiation), if one knows the irradiance Edir, hor on the horizontal surface!
+(not important)
+P31
+
+
+## 8. Sketch the influence of inclination angle γE and surface efficiency on the shading angle α!
+(not important)
+P54
+
+
+## 9. In the following solar orbit diagram, the shading effects are entered in the form of an object traverse. Rate and discuss the shading effects!在下面的太阳轨道图中，阴影效果以物体遍历的形式输入。 评价并讨论阴影效果！
+These calculations are performed for all obstacles in the vicinity of the solar system. Object height and distance to the observer point must be known Silhouette of the environment in the form of a polygon (= object polygon) is entered in a sun orbit diagram Read when shadowing occurs这些计算是针对太阳系附近的所有障碍物进行的。 必须知道物体高度和到观察点的距离 将多边形形式的环境轮廓（=物体多边形）输入到太阳轨道图中 发生阴影时读取
+
+
+## 10. Sketch the influence of inclination angle γE and shading angle α on the relative shading losses!
+(not important)
+P69
+
+
+## 11. Which environmental boundary conditions lead to significant shading losses, which must be taken into account when constructing solar systems? Which rule of thumb is followed to avoid shading losses?哪些环境边界条件会导致显着的遮阳损失，在构建太阳能系统时必须考虑这些？ 遵循哪种经验法则可以避免阴影损失？
+Minimize shading losses in solar systems by considering these factors:通过考虑以下因素来最大限度地减少太阳能系统的遮阳损失：
+1. Buildings: Keep a distance of at least 2.7 times the height of the shadow-casting edge from the solar facade.建筑物：与太阳立面的距离至少为阴影投射边缘高度的2.7倍。
+2. Trees/Vegetation: Maintain a distance of at least 2 times the height for stand-alone conifers. Be cautious with deciduous trees due to extended foliage periods.树木/植被：保持独立针叶树高度至少 2 倍的距离。 由于叶子期较长，因此要小心落叶树。
+3. Topography: Shading effects are influenced by nearby objects' altitude. Northern slopes increase shading, while southern slopes decrease it.地形：阴影效果受附近物体海拔高度的影响。 北坡增加阴影，而南坡减少阴影。
+Follow these guidelines to reduce shading and optimize solar system efficiency.遵循这些方法可以减少遮挡并优化太阳能系统效率。
+
+
+## 12. To measure the global irradiance 2 measurement principles are used. Describe these with typical application features and restrictions!
+(not important)
+1. Semiconductor sensors: These sensors generate a current based on the irradiance, but they are affected by temperature and spectral changes and require corrections for accurate measurements.
+2. Pyranometers: These instruments directly measure total solar radiation and are not influenced by temperature or spectral variations. They provide reliable measurements of global irradiance.
