--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -4,6 +4,11 @@ title: 可再生能源课后习题(中英对译)
 ---
 
 
+
+# *已修复公式乱码*<br/><br/><br/>
+
+
+
 # ***不是最终题库!<br/>不是最终题库!<br/>不是最终题库!<br/>这是外教给的课后习题，外教最后会有复习课带大家一起精简形成题库***
 
 
