--- a/_posts/2023-06-26-可再生能源课后习题_中英对译.md
+++ b/_posts/2023-06-26-可再生能源课后习题_中英对译.md
@@ -5,7 +5,7 @@ title: 可再生能源课后习题(中英对译)
 
 
 
-# *已修复公式乱码*<br/>由[Google Translate](https://translate.google.com)机翻, 未进行校对，可能会有亿点问题，自己斟酌着看。实在不行看[进入纯英文版](https://coolestenoch.github.io/Course_SYU/%E5%8F%AF%E5%86%8D%E7%94%9F%E8%83%BD%E6%BA%90%E8%AF%BE%E5%90%8E%E4%B9%A0%E9%A2%98)<br/><br/>
+# *已修复公式乱码*<br/>由[*Google Translate*](https://translate.google.com)机翻, 未进行校对，可能会有亿点问题，自己斟酌着看。实在不行看[*点我看纯英原文版*](https://coolestenoch.github.io/Course_SYU/%E5%8F%AF%E5%86%8D%E7%94%9F%E8%83%BD%E6%BA%90%E8%AF%BE%E5%90%8E%E4%B9%A0%E9%A2%98)<br/><br/>
 
 
 
