--- a/_posts/1970-01-01-记一次未完成的Android编译.md
+++ b/_posts/1970-01-01-记一次未完成的Android编译.md
@@ -1,6 +1,10 @@
 ![image](https://tse1-mm.cn.bing.net/th/id/OIP-C.PXi-K-Ym4EAqkcjluImyBAHaD-?w=276&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7)
 
 
+
+
+写于2024-01-25。为了不影响题库分享，把写文时间改到了1970-01-01
+
 # 前情提要
 这是一台“过时”的华为平板，搭载高通616处理器，3+16GB存储组合，10.1英尺1920x1200屏幕。
 ***⚠️万字长文预警***
