--- a/_posts/2025-09-16-学术英语写作.md
+++ b/_posts/2025-09-16-学术英语写作.md
@@ -1,4 +1,4 @@
-## 毕业实习
+## 学术英语写作
 
 
 > <div align="center"> <img src="https://v2.jinrishici.com/one.svg" /> </div>
@@ -168,5 +168,103 @@ Star: the specific topic or focus of the research.
 # 250916上课
 If we don't recognize the serious problem of wast gas, our planet will be faced with disaster.
 改：Failure to recognize the seriousness of waste gas will lead to a disaster for the planet.
+
+
+众所周知：It is universally acknowledged that...
+
+主动句改被动句：
+1. Someone will demonstrate the program to the students.
+The programs will be demonstrated to the students.
+
+
+2. During the population explosion of the 19th and 20th centuries, people designed thousands of engineering projects to control floods and protect clean water supplies.
+During the population explosion of the 19th and 20th centuries, thousands of engineering projects were designed to control floods and protect clean water supplies.
+
+
+3. We make decisions on the basis of price, delivery dates, after-sales service or any other variables.
+Desicions are made on the basis of price, delivery dates, after-sales service or any other variables.
+
+
+4. A number of studies have investigated the practice of communicative approach in a variety of contexts.
+The practice of communicative approach has been investigated in a variety of contexts.
+
+
+5. The researchers may conduct experiments on planetary gear trains.
+Experiments on planetary gear trains may be conducted.
+
+
+6. If our environment is not protected, our children will suffer the most.
+If the environment is not protected, children will suffer the most. 
+Failure to protect the enviromnent will render children to suffer...
+
+7. I believe that we need to address these problems.
+These problems need to be addressed. 
+It is necessary to address these problems.
+
+
+8. Economic situation won't improve until efforts are made by the government. (不能用缩写！)
+把won't改成will not
+
+
+
+
+
+# 250923上课
+## Seven steps to choose a topic
+1. Understand the basic research theory and the core concepts.
+2. Know what your supervisor requires/ the university rules/journal requirements the budget.
+3. Identify your broad interest area.
+4. Narrow down your broad topic to a more specific area.
+5. Literature review -- understand the current state of knowledge of the field. 
+6. Identify potential research topic.
+7. Propose two or three narrow & specific research questions and evaluate them systematically.
+
+
+## Four principles for choosing a topic.
+1. Interesting.
+2. Important.
+3. Manageable.
+4. Researchable.
+
+
+## Criteria of a good topic
+1. Not be too broad.
+2. Not to be too narrow.
+3. Be important.
+4. Be something that you know about.
+5. Be researchable.
+6. Be meaningful.
+
+
+
+## Strategies to organize your title
+1. Provide as much relevant information as possible, but be concise.
+2. A sentence forms a title, which is a statement title.
+3. A question forms a title
+4. Avoid ambiguity in noun phrases.
+
+
+## Titles should be
+1. Clear
+2. Concise
+3. Concrete(representative of the major content)
+4. Apealing
+5. 平均长度15words, 最高不要超20words
+
+
+
+# 250925上课
+## Introduction session should be
+1. What topic am I going to learn about?
+2. Why is that topic important?
+3. Do I know the topic already? What do I know already?
+
+
+## 5 Stages of introduction (🔥必考🔥)
+1. First Stage: General statements about a field of research to provide the reader with a setting(背景) for the problem to be reported.
+2. Second Stage (***Literature review***): More specific statements about the aspects of the problem already studied by other researchers.
+3. Third Stage (***Gap 前人研究的空白***): Statements that indicate the need for more investigation.
+4. Fourth Stage: Very specific statements giving the purpose/objective of the writer's study.
+5. Fifth Stage: Optional statements that give a value or justification for carrying out the study.
 
 
